[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
name = "httpflex"
version = "0.1.0"
description = "一个功能强大、易于使用的 HTTP 客户端库，支持同步、异步、缓存、请求重试等功能（内部测试版）"
readme = "README.md"
keywords = [ "client", "http", "requests" ]
license = { text = "MIT" }
authors = [
  { name = "HACK-WU" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "celery>=5.4.0",
    "redis>=4.6.0",
    "requests>=2.32.4",
]

optional-dependencies.celery = [
  "celery>=5.4.0",
]

optional-dependencies.drf = [
  "djangorestframework>=3.15.1",
]

optional-dependencies.redis = [
  "redis>=4.6.0",
]

urls.Documentation = "https://github.com/HACK-WU/httpflex#readme"
urls.Homepage = "https://github.com/HACK-WU/httpflex"
urls.Issues = "https://github.com/HACK-WU/httpflex/issues"
urls.Repository = "https://github.com/HACK-WU/httpflex"

[dependency-groups]
dev = [
    "djangorestframework>=3.15.1",
    "fakeredis>=2.33",
    "pre-commit>=4.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
    "responses>=0.25.8",
    "ruff>=0.11.6",
]

[tool.setuptools.packages.find]
where = [ "src" ]

# ruff 配置

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "build",
  "dist",
  "node_modules",
  "venv",
]

output-format = "full"
format.docstring-code-format = true

lint.select = [ "E4", "E7", "E9", "F", "UP" ]
lint.ignore = [
  "B904",
  "B905",
  "EM101",
  "EXE001",
  "G004",
  "ISC001",
  "PLC1901",
  "PLW060",
  "PLW2901",
  "PT011",
  "PT018",
  "RUF002",
  "RUF003",
  "RUF013",
  "S101",
  "S311",
  "SIM905",
  "SLF001",
  "UP038",
]
lint.extend-ignore = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.extend-safe-fixes = [ "UP" ]
lint.mccabe.max-complexity = 17
lint.pylint.allow-magic-value-types = [ "float", "int", "str" ]
lint.pylint.max-args = 10
lint.pylint.max-branches = 20
lint.pylint.max-returns = 8
# pytest 配置
lint.pylint.max-statements = 88

[tool.pytest.ini_options]
pythonpath = [ "src" ]
testpaths = [ "tests/" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
markers = [
  "unit: 单元测试",
  "slow: 慢速测试（>1s）",
]
addopts = [
  "-v",
  "--tb=short",
  "--cov=httpflex",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
  "-p",
  "no:warnings",
]

# 覆盖率配置

[tool.coverage.run]
source = [ "httpflex" ]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
